fixed graph alignment

--- a/future-at-brown-gui/src/css/Graph.css
+++ b/future-at-brown-gui/src/css/Graph.css
@@ -14,3 +14,7 @@ html, body
 #profilebutton {
     z-index: 10;
 }
+
+canvas {
+    margin:auto;
+}
